# discord-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  shell.nix
discord_bot/: main.py
discord_bot/extensions/: gambling.py  help.py  music.py
discord_bot/utils/: communication.py  youtube.py
discord_bot/views/: help.py  music.py
extensions/: gambling.py
src/: gambling.py
