[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Multi usage custom discord bot."
authors = ["Alexandre Rulleau <rulleaualexandre@gmail.com>"]
license = "MIT"
include = []

[tool.poetry.scripts]
bot = 'discord_bot.main:main'

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.3.0"
black = "^24.3.0"
isort = "^5.12.0"
discord = "^2.2.3"
typing-extensions = "^4.6.3"
setuptools = "^67.8.0"
pynacl = "^1.5.0"
yt-dlp = "^2024.7.1"
types-requests = "^2.31.0.1"
names = "^0.3.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true
